Minor adjustments to .travis.yml
- skipping tests

- deploying on tagged builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,17 @@ language: node_js
 node_js:
   - 8
 
+
+script:
+  - echo "skipping tests"
+
+deploy:
+  provider: script
+  script: "npm run deploy"
+  skip_cleanup: true
+  on:
+    tags: true
+
 notifications:
   email:
     recipients:
