--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 node_js:
   - 8
 
-
 script:
   - CI=true npm run build
 
@@ -19,3 +18,9 @@ notifications:
     - chris@unchained-capital.com
     on_success: change
     on_failure: always
+
+before_deploy:
+- git remote set-url origin https://${GH_TOKEN}@github.com/unchained-capital/caravan.git
+- git config --global user.email "Travis CI<ci@unchained-capital.com>"
+- git config --global user.name "TravisCI"
+
