--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "trezor-connect": "^8.0.13",
-    "unchained-bitcoin": "0.0.6",
-    "unchained-wallets": "0.0.8"
+    "unchained-bitcoin": "file:../unchained-bitcoin",
+    "unchained-wallets": "file:../unchained-wallets"
   }
 }
