--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "classnames": "^2.2.6",
     "hi-base32": "^0.5.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "pako": "^1.0.10",
     "prop-types": "^15.7.2",
@@ -79,7 +80,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "trezor-connect": "^7.0.5",
-    "unchained-bitcoin": "^0.0.5",
-    "unchained-wallets": "^0.0.5"
+    "unchained-bitcoin": "0.0.6",
+    "unchained-wallets": "0.0.8"
   }
 }
