--- a/package.json
+++ b/package.json
@@ -77,9 +77,9 @@
     "react-table": "^6.10.0",
     "react-toggle": "^4.0.2",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "unchained-bitcoin": "file:../unchained-bitcoin",
     "unchained-wallets": "file:../unchained-wallets"
   }
