--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: node_js
-node_js:
-  - 8
 
-script:
-  - CI=true npm run build
+jobs:
+  include:
+    - stage: test
+      node_js: 6
+      script: npm run test
+      node_js: 8
+      script: npm run test
+      node_js: 10
+      script: npm run test
+    - node_js: 12
+      #FIXME remove CI=false after linting warnings in transactionReducer are fixed.
+      script: CI=false npm run build
 
 deploy:
   provider: script
@@ -24,4 +32,3 @@ before_deploy:
 - git remote set-url origin https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git
 - git config --global user.email "Travis CI<ci@unchained-capital.com>"
 - git config --global user.name "TravisCI"
-
