--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gh-pages": "^2.0.1",
     "jest-junit": "^8.0.0",
     "mocha": "5.2.0",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.2"
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
@@ -62,6 +62,7 @@
     "bitcoinjs-lib": "^4.0.5",
     "bowser": "^2.6.1",
     "classnames": "^2.2.6",
+    "diff": "^4.0.2",
     "hi-base32": "^0.5.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
