Fix linting issues from upgrading airbnb config

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,9 +10,8 @@
     "airbnb",
     "prettier",
     "prettier/react",
-
   ],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
   }
 }
