--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "diff": "^4.0.2",
     "hi-base32": "^0.5.0",
     "lodash": "^4.17.11",
+    "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "pako": "^1.0.10",
