Fix travis build to lint and run tests (again).
The travis build was building caravan but wasn't linting and running
tests.  This commit fixes the jobs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,16 @@ language: node_js
 jobs:
   include:
     - stage: test
-      node_js: 6
-      script: npm run test
-      node_js: 8
       script: npm run test
       node_js: 10
       script: npm run test
     - node_js: 12
+      script: npm run ci
+
+    - stage: build
+      node_js: 10
+      script: npm run build
+      node_js: 12
       script: npm run build
 
 deploy:
