--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chai": "4.2.0",
-    "commander": "^2.19.0",
-    "enzyme": "3.8.0",
-    "enzyme-adapter-react-16": "1.7.1",
-    "eslint-config-airbnb": "^17.1.0",
+    "commander": "^5.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "gh-pages": "^2.0.1",
-    "jest-junit": "^8.0.0",
-    "mocha": "5.2.0",
+    "gh-pages": "^2.2.0",
+    "jest-junit": "^10.0.0",
+    "mocha": "7.1.1",
     "prettier": "^2.0.2"
   },
   "scripts": {
@@ -51,17 +51,17 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@ledgerhq/hw-app-btc": "^4.21.0",
-    "@ledgerhq/hw-transport-node-hid": "^4.22.0",
-    "@ledgerhq/hw-transport-u2f": "^4.21.0",
+    "@ledgerhq/hw-app-btc": "^5.13.1",
+    "@ledgerhq/hw-transport-node-hid": "^5.13.1",
+    "@ledgerhq/hw-transport-u2f": "^5.13.1",
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "base58check": "^2.0.0",
-    "bignumber.js": "^8.1.1",
+    "bignumber.js": "^9.0.0",
     "bip32": "^2.0.4",
-    "bitcoin-address-validation": "^0.2.9",
-    "bitcoinjs-lib": "^4.0.5",
+    "bitcoin-address-validation": "^1.0.2",
+    "bitcoinjs-lib": "^5.1.7",
     "bowser": "^2.6.1",
     "classnames": "^2.2.6",
     "diff": "^4.0.2",
@@ -71,18 +71,18 @@
     "node-sass": "^4.13.1",
     "pako": "^1.0.10",
     "prop-types": "^15.7.2",
-    "qrcode.react": "^0.9.3",
+    "qrcode.react": "^1.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-paginate": "^6.3.0",
     "react-qr-reader": "^2.2.1",
-    "react-redux": "^5.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8",
-    "react-table": "^6.10.0",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
+    "react-table": "6.11.5",
     "react-toggle": "^4.0.2",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
