docs(other): add contribution steps and guidelines to the project
Adds CONTRIBUTING.md to the project and links it from README.md.
Also fixes small typo in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "caravan",
   "version": "0.2.0",
-  "description": "Unchained Capital's Bitcoin Multisig App",
+  "description": "Unchained Capital's Bitcoin Multisig Application",
   "main": "index.jsx",
   "publicPrivate": true,
   "repository": {
