ci=true for gh pages build

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "gh-pages": "npm run build && gh-pages -d build"
+    "gh-pages": "CI=true npm run build && gh-pages -d build"
   },
   "bin": {},
   "browserslist": [
