add slices table for address list view (#51)
* SlicesTableContainer for displaying slices in address list view and connecting to app state

* styling for details panel

* update more variable naming: node(s) -> slice(s)

* refactor depositable address display for receive to use selectors and update on new deposit

* filtering and sorting of slices in table

* update for gh-pages build command.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "lint:fix": "eslint --ext .js,.jsx --fix src/",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "gh-pages": "CI=true npm run build && gh-pages -d build"
   },
   "bin": {},
   "browserslist": [
