Update help page and package.json for v0.2.0.
Update the help page with new copy and devices links and updates the
version to 0.2.0.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "caravan",
-  "version": "0.1.5",
-  "description": "Unchained Capital's Bitcoin Multisig DApp",
+  "version": "0.2.0",
+  "description": "Unchained Capital's Bitcoin Multisig App",
   "main": "index.jsx",
   "publicPrivate": true,
   "repository": {
