--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "classnames": "^2.2.6",
     "diff": "^4.0.2",
     "hi-base32": "^0.5.0",
+    "history": "^4.10.1",
     "lodash": "^4.17.11",
     "material-table": "^1.57.2",
     "moment": "^2.24.0",
