chore(other): adds react-testing-library
Adds react-testing-library and example card tests.

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "prettier/react",
     "plugin:testing-library/recommended",
     "plugin:jest-dom/recommended",
+    "plugin:jest-dom/recommended",
     "plugin:cypress/recommended"
   ],
   "rules": {
