--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@commitlint/travis-cli": "^8.3.5",
+    "@testing-library/jest-dom": "^5.6.0",
+    "@testing-library/react": "^10.0.4",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chai": "4.2.0",
@@ -31,8 +33,10 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-jest-dom": "^2.1.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-testing-library": "^3.1.0",
     "gh-pages": "^2.2.0",
     "install": "^0.13.0",
     "jest-junit": "^10.0.0",
