chore(other): fixes gh-pages deploy npm script
You were unable to run npm run gh-pages locally because we were
using commitlint-travis as part of the build. Change the scripts
around a bit to avoid this issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ jobs:
 
     - stage: build
       node_js: 10
-      script: npm run build
+      script: npm run build:ci
       node_js: 12
-      script: npm run build
+      script: npm run build:ci
 
 deploy:
   provider: script
