--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
-    "build": "npm run ci && react-scripts build",
-    "ci": "npm run lint:code && npm run lint:commit-travis && npm run test-ci",
+    "build": "npm run check && react-scripts build",
+    "build:ci": "npm run ci && react-scripts build",
+    "check": "npm run lint && npm run test:ci",
+    "ci": "npm run lint:code && npm run lint:commit-travis && npm run test:ci",
     "test": "react-scripts test",
-    "test-ci": "react-scripts test --reporters ./node_modules/jest-junit --coverage --coverageReporters cobertura",
+    "test:ci": "react-scripts test --reporters ./node_modules/jest-junit --coverage --coverageReporters cobertura",
     "lint": "npm run lint:code && npm run lint:commit",
     "lint:code": "eslint --ext .js,.jsx src/",
     "lint:commit": "commitlint -e",
