--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "check": "npm run lint && npm run test:ci",
     "ci": "npm run lint:code && npm run lint:commit-travis && npm run test:ci",
     "test": "react-scripts test",
-    "test:ci": "react-scripts test --reporters ./node_modules/jest-junit --coverage --coverageReporters cobertura",
+    "test:ci": "CI=true react-scripts test --coverage",
     "lint": "npm run lint:code && npm run lint:commit",
     "lint:code": "eslint --ext .js,.jsx src/",
     "lint:commit": "commitlint -e",
