--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "chai": "4.2.0",
     "commander": "^5.0.0",
     "commitlint-config-cz": "^0.12.1",
+    "cypress": "^4.5.0",
     "cz-customizable": "^6.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "gh-pages": "^2.2.0",
@@ -44,6 +46,9 @@
     "check": "npm run lint && npm run test:ci",
     "ci": "npm run lint:code && npm run lint:commit-travis && npm run test:ci",
     "test": "react-scripts test",
+    "cypress:open": "$(npm bin)/cypress open",
+    "cypress:run": "$(npm bin)/cypress run",
+    "cypress:run:record": "$(npm bin)/cypress run --record",
     "test:ci": "CI=true react-scripts test --coverage",
     "lint": "npm run lint:code && npm run lint:commit",
     "lint:code": "eslint --ext .js,.jsx src/",
@@ -77,6 +82,7 @@
     "bowser": "^2.6.1",
     "classnames": "^2.2.6",
     "diff": "^4.0.2",
+    "fs-extra": "^9.0.0",
     "hi-base32": "^0.5.0",
     "history": "^4.10.1",
     "lodash": "^4.17.11",
@@ -85,6 +91,7 @@
     "node-sass": "^4.14.1",
     "notistack": "^0.9.11",
     "pako": "^1.0.10",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.8.6",
