--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@ledgerhq/hw-transport-u2f": "^4.21.0",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.19.0",
     "base58check": "^2.0.0",
     "bignumber.js": "^9.0.0",
@@ -114,7 +115,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "unchained-bitcoin": "0.0.13",
+    "unchained-bitcoin": "0.0.14",
     "unchained-wallets": "0.1.1"
   }
 }
