build(other): make commitlint check latest commit
Instead of using commitlint -e which checks the last commit from
.git/COMMIT_EDITMSG use --from which checks actual changelog
history.

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "gh-pages": "CI=true npm run build && gh-pages -d build",
     "lint": "npm run lint:code && npm run lint:commit",
     "lint:code": "eslint --ext .js,.jsx src/",
-    "lint:commit": "commitlint -e",
+    "lint:commit": "commitlint --from=HEAD~1",
     "lint:commit-travis": "commitlint-travis",
     "predeploy": "npm run build",
     "release": "standard-version",
