--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-testing-library": "^3.1.0",
     "gh-pages": "^3.1.0",
+    "husky": "^4.3.6",
     "install": "^0.13.0",
     "jest-junit": "^11.0.1",
     "mocha": "7.1.1",
@@ -48,7 +49,7 @@
     "build": "npm run check && react-scripts build",
     "build:ci": "npm run ci && react-scripts build",
     "check": "npm run lint && npm run test:ci",
-    "ci": "npm run lint:code && npm run lint:commit-travis && npm run test:ci",
+    "ci": "npm run lint && npm run commitlint-travis && npm run test:ci",
     "commit": "./node_modules/cz-customizable/standalone.js",
     "cypress:open": "$(npm bin)/cypress open",
     "cypress:run": "$(npm bin)/cypress run",
@@ -56,15 +57,18 @@
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "gh-pages": "CI=true npm run build && gh-pages -d build",
-    "lint": "npm run lint:code && npm run lint:commit",
-    "lint:code": "eslint --ext .js,.jsx src/",
-    "lint:commit": "commitlint --from=HEAD~1",
-    "lint:commit-travis": "commitlint-travis",
+    "lint": "eslint --ext .js,.jsx src/",
+    "commitlint-travis": "commitlint-travis",
     "predeploy": "npm run build",
     "release": "standard-version",
     "start": "HTTPS=true react-scripts start",
     "test": "react-scripts test",
     "test:ci": "CI=true react-scripts test --coverage"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "bin": {},
   "browserslist": [
