--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
-name: Build and Deploy
-on: [release]
+name: Release Caravan
+on:
+  release:
+    types: [published]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -15,7 +17,7 @@ jobs:
           npm install
           npm run build
 
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
