build(other): fix release build gh action
Fix the release gh action by running apt update before install.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
 
       - name: Install and Build
         run: |
+          sudo apt-get update
           sudo apt-get install libudev-dev libusb-1.0-0-dev
           npm install
           npm run build
