--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "url": "https://github.com/unchained-capital/caravan/issues"
   },
   "homepage": "https://unchained-capital.github.io/caravan",
+  "engineStrict": true,
+  "engines": {
+    "node": "<15"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@commitlint/cli": "^9.1.2",
