--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,11 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Ensure Node Version
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+
       - name: Install and Build
         run: |
           sudo apt-get update
