--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "unchained-bitcoin": "0.1.7",
-    "unchained-wallets": "0.1.21"
+    "unchained-bitcoin": "file:../unchained-bitcoin",
+    "unchained-wallets": "0.1.25"
   }
 }
