build: added env vars to support changing the upstream docker server
WIth this commit, you can specify the bitcoin server that gets proxied by
the interal nginx config by setting BITCOIN_HOST and BITCOIN_PORT to the
address of a bitcoin server and the RPC port it is listening on respectively.

--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -17,7 +17,7 @@ server {
 
 # change this to an accessible reference for your node
 upstream bitcoind {
-  server bitcoind:18443;
+  server $BITCOIN_HOST:$BITCOIN_PORT;
 }
 
 server {
