--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "notistack": "^0.9.11",
     "pako": "^1.0.10",
     "path": "^0.12.7",
+    "prettier-eslint": "^15.0.1",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.8.6",
