--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,9 @@
     "node": true,
     "jest": true
   },
-  "plugins": ["prettier"],
+  "plugins": [
+    "prettier"
+  ],
   "extends": [
     "airbnb",
     "prettier",
@@ -19,6 +21,8 @@
     "react/jsx-props-no-spreading": "off"
   },
   "settings": {
-    "import/core-modules": ["test-utils"]
+    "import/core-modules": [
+      "test-utils"
+    ]
   }
 }
