--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": [
-    "react",
-    "es2015"
+    "@babel/preset-react",
+    "@babel/preset-env"
   ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties"
-    ]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
