--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.20.2",
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/travis-cli": "^9.0.1",
@@ -45,24 +46,25 @@
     "jest-junit": "^11.0.1",
     "mocha": "7.1.1",
     "prettier": "^2.0.2",
+    "react-app-rewired": "^2.2.1",
     "standard-version": "^9.0.0"
   },
   "scripts": {
-    "build": "npm run check && react-scripts build",
-    "build:ci": "npm run ci && react-scripts build",
+    "build": "npm run check && REACT_APP_GIT_SHA=`git rev-parse --short HEAD` react-app-rewired build",
+    "build:ci": "npm run ci && REACT_APP_GIT_SHA=`git rev-parse --short HEAD` react-app-rewired build",
     "check": "npm run lint && npm run test:ci",
     "ci": "npm run lint && npm run commitlint-travis && npm run test:ci",
     "commit": "./node_modules/cz-customizable/standalone.js",
     "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject",
+    "eject": "react-app-rewired eject",
     "gh-pages": "CI=true npm run build && gh-pages -d build",
     "lint": "eslint --ext .js,.jsx src/",
     "commitlint-travis": "commitlint-travis",
     "predeploy": "npm run build",
     "release": "standard-version",
-    "start": "HTTPS=true react-scripts start",
-    "test": "react-scripts test",
-    "test:ci": "CI=true react-scripts test --coverage"
+    "start": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` HTTPS=true react-app-rewired start",
+    "test": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` react-app-rewired test",
+    "test:ci": "CI=true react-app-rewired test --coverage"
   },
   "husky": {
     "hooks": {
@@ -118,7 +120,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.56.2",
-    "unchained-bitcoin": "0.1.9",
-    "unchained-wallets": "0.1.26"
+    "unchained-bitcoin": "^0.2.1",
+    "unchained-wallets": "^0.2.2"
   }
 }
