--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
     "commander": "^5.0.0",
     "commitlint-config-cz": "^0.13.1",
     "cz-customizable": "^6.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jest-dom": "^3.0.1",
@@ -44,10 +42,11 @@
     "husky": "^4.3.6",
     "install": "^0.13.0",
     "jest-junit": "^11.0.1",
-    "mocha": "7.1.1",
+    "mocha": "^10.2.0",
     "prettier": "^2.0.2",
     "react-app-rewired": "^2.2.1",
-    "standard-version": "^9.0.0"
+    "standard-version": "^9.0.0",
+    "yargs": "^17.7.1"
   },
   "scripts": {
     "build": "npm run check && REACT_APP_GIT_SHA=`git rev-parse --short HEAD` react-app-rewired build",
@@ -91,14 +90,12 @@
     "bowser": "^2.6.1",
     "classnames": "^2.2.6",
     "diff": "^4.0.2",
-    "fs-extra": "^9.0.0",
     "hi-base32": "^0.5.0",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
     "material-table": "^1.57.2",
     "moment": "^2.24.0",
     "notistack": "^0.9.11",
-    "pako": "^1.0.10",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
@@ -112,7 +109,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.3",
     "react-table": "6.11.5",
     "react-toggle": "^4.0.2",
     "redux": "^4.0.1",
