--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Unchained Capital's Bitcoin Multisig Application",
   "main": "index.jsx",
   "publicPrivate": true,
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/unchained-capital/caravan"
@@ -19,15 +20,13 @@
     "node": ">=16"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.20.2",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.0",
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/travis-cli": "^9.0.1",
     "@testing-library/jest-dom": "^5.6.0",
     "@testing-library/react": "^10.0.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0",
     "chai": "4.2.0",
     "commander": "^5.0.0",
     "commitlint-config-cz": "^0.13.1",
@@ -46,7 +45,6 @@
     "jest-junit": "^11.0.1",
     "mocha": "7.1.1",
     "prettier": "^2.0.2",
-    "react-app-rewired": "^2.2.1",
     "standard-version": "^9.0.0"
   },
   "scripts": {
@@ -56,7 +54,6 @@
     "ci": "npm run lint && npm run commitlint-travis && npm run test:ci",
     "commit": "./node_modules/cz-customizable/standalone.js",
     "deploy": "gh-pages -d build",
-    "eject": "react-app-rewired eject",
     "gh-pages": "CI=true npm run build && gh-pages -d build",
     "lint": "eslint --ext .js,.jsx src/",
     "commitlint-travis": "commitlint-travis",
@@ -64,7 +61,10 @@
     "release": "standard-version",
     "start": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` HTTPS=true react-app-rewired start",
     "test": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` react-app-rewired test",
-    "test:ci": "CI=true react-app-rewired test --coverage"
+    "test:ci": "CI=true react-app-rewired test --coverage",
+    "dev": "vite",
+    "build:vite": "vite build",
+    "preview": "vite preview"
   },
   "husky": {
     "hooks": {
@@ -79,9 +79,9 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@material-ui/core": "^4.9.11",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "axios": "^0.21.2",
     "base58check": "^2.0.0",
     "bignumber.js": "^9.0.0",
@@ -112,7 +112,6 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
     "react-table": "6.11.5",
     "react-toggle": "^4.0.2",
     "redux": "^4.0.1",
