refactor(build): fix all build and js errors with conversion to vite

--- a/package.json
+++ b/package.json
@@ -20,19 +20,18 @@
     "node": ">=16"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0",
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/travis-cli": "^9.0.1",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@testing-library/jest-dom": "^5.6.0",
     "@testing-library/react": "^10.0.4",
+    "@vitejs/plugin-react": "^3.1.0",
     "chai": "4.2.0",
     "commander": "^5.0.0",
     "commitlint-config-cz": "^0.13.1",
     "cz-customizable": "^6.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jest-dom": "^3.0.1",
@@ -45,7 +44,8 @@
     "jest-junit": "^11.0.1",
     "mocha": "7.1.1",
     "prettier": "^2.0.2",
-    "standard-version": "^9.0.0"
+    "standard-version": "^9.0.0",
+    "vite": "^4.1.0"
   },
   "scripts": {
     "build": "npm run check && REACT_APP_GIT_SHA=`git rev-parse --short HEAD` react-app-rewired build",
@@ -79,9 +79,12 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.122",
+    "@mui/material": "^5.11.12",
+    "@mui/styles": "^5.11.12",
     "axios": "^0.21.2",
     "base58check": "^2.0.0",
     "bignumber.js": "^9.0.0",
@@ -89,30 +92,30 @@
     "bitcoin-address-validation": "^1.0.2",
     "bitcoinjs-lib": "^5.1.7",
     "bowser": "^2.6.1",
+    "buffer": "^6.0.3",
     "classnames": "^2.2.6",
     "diff": "^4.0.2",
     "fs-extra": "^9.0.0",
     "hi-base32": "^0.5.0",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
-    "material-table": "^1.57.2",
     "moment": "^2.24.0",
-    "notistack": "^0.9.11",
+    "notistack": "^3.0.0",
     "pako": "^1.0.10",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
-    "react": "^16.8.6",
+    "react": "^17.0.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.6",
+    "react-dom": "^17.0.0",
     "react-dropzone": "^3.10.0",
-    "react-paginate": "^6.3.0",
-    "react-qr-reader": "^2.2.1",
+    "react-paginate": "^8.1.4",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-table": "6.11.5",
+    "react-table": "7.8.0",
     "react-toggle": "^4.0.2",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
