--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/jest-dom": "^5.6.0",
     "@testing-library/react": "^10.0.4",
     "@vitejs/plugin-react": "^3.1.0",
+    "babel-eslint": "^10.1.0",
     "chai": "4.2.0",
     "commander": "^5.0.0",
     "commitlint-config-cz": "^0.13.1",
@@ -82,9 +83,9 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.122",
-    "@mui/material": "^5.11.12",
-    "@mui/styles": "^5.11.12",
+    "@mui/lab": "^5.0.0-alpha.123",
+    "@mui/material": "^5.11.13",
+    "@mui/styles": "^5.11.13",
     "axios": "^0.21.2",
     "base58check": "^2.0.0",
     "bignumber.js": "^9.0.0",
