--- a/package.json
+++ b/package.json
@@ -83,9 +83,9 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.123",
-    "@mui/material": "^5.11.13",
-    "@mui/styles": "^5.11.13",
+    "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.5.0",
+    "@mui/styles": "^5.5.0",
     "axios": "^0.21.2",
     "base58check": "^2.0.0",
     "bignumber.js": "^9.0.0",
@@ -100,6 +100,7 @@
     "hi-base32": "^0.5.0",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
+    "material-table": "^2.0.3",
     "moment": "^2.24.0",
     "notistack": "^3.0.0",
     "pako": "^1.0.10",
