--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "husky": "^4.3.6",
     "install": "^0.13.0",
     "jest-junit": "^11.0.1",
-    "mocha": "7.1.1",
+    "mocha": "^10.2.0",
     "prettier": "^2.0.2",
     "standard-version": "^9.0.0",
     "vite": "^4.1.0"
