--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "test": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` react-app-rewired test",
     "test:ci": "CI=true react-app-rewired test --coverage",
     "dev": "VITE_GIT_SHA=`git rev-parse --short HEAD` vite",
-    "build:vite": "vite build",
+    "build:vite": "npm run check && VITE_GIT_SHA=`git rev-parse --short HEAD` vite build",
     "preview": "vite preview"
   },
   "husky": {
