--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "node": ">=16"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-import-assertions": "^7.20.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/travis-cli": "^9.0.1",
@@ -29,6 +34,8 @@
     "@testing-library/react": "^10.0.4",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.5.0",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "chai": "4.2.0",
     "commander": "^5.0.0",
     "commitlint-config-cz": "^0.13.1",
@@ -42,6 +49,8 @@
     "gh-pages": "^3.1.0",
     "husky": "^4.3.6",
     "install": "^0.13.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-junit": "^11.0.1",
     "mocha": "^10.2.0",
     "prettier": "^2.0.2",
@@ -61,8 +70,8 @@
     "predeploy": "npm run build",
     "release": "standard-version",
     "start": "HTTPS=true npm run preview",
-    "test": "VITE_GIT_SHA=`git rev-parse --short HEAD` mocha src/tests",
-    "test:ci": "CI=true mocha --coverage",
+    "test": "VITE_GIT_SHA=`git rev-parse --short HEAD` jest",
+    "test:ci": "CI=true jest --coverage",
     "dev": "VITE_GIT_SHA=`git rev-parse --short HEAD` vite",
     "preview": "VITE_GIT_SHA=`git rev-parse --short HEAD` vite preview"
   },
