fix(cleanup): remove unused babel packages and unnecessary env variables

--- a/babel.config.json
+++ b/babel.config.json
@@ -9,8 +9,5 @@
     ],
     "@babel/preset-typescript"
   ],
-  "plugins": [
-    "@babel/plugin-transform-runtime",
-    "babel-plugin-transform-vite-meta-env"
-  ]
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
