--- a/package.json
+++ b/package.json
@@ -27,14 +27,11 @@
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/travis-cli": "^9.0.1",
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@testing-library/jest-dom": "^5.6.0",
     "@testing-library/react": "^10.0.4",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.5.0",
-    "chai": "4.2.0",
     "commander": "^5.0.0",
     "commitlint-config-cz": "^0.13.1",
     "cz-customizable": "^6.2.0",
@@ -50,10 +47,10 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-junit": "^11.0.1",
-    "mocha": "^10.2.0",
     "prettier": "^2.0.2",
     "standard-version": "^9.0.0",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-node-polyfills": "^0.7.0"
   },
   "scripts": {
     "build": "npm run check && VITE_GIT_SHA=`git rev-parse --short HEAD` vite build",
