--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: Release Caravan
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - refactor-vite-build
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -14,7 +15,7 @@ jobs:
       - name: Ensure Node Version
         uses: actions/setup-node@v2
         with:
-          node-version: '12'
+          node-version: "16"
 
       - name: Install and Build
         run: |
