--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
+          ref: refactor-vite-build
 
       - name: Ensure Node Version
         uses: actions/setup-node@v3
@@ -29,6 +30,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.4.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
           folder: build
           clean: true
