--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/unchained-capital/caravan/issues"
   },
-  "homepage": "https://dylanbathurst.github.io/caravan",
+  "homepage": "https://unchained-capital.github.io/caravan",
   "engineStrict": true,
   "engines": {
     "node": ">=16"
@@ -32,7 +32,6 @@
     "@commitlint/travis-cli": "^9.0.1",
     "@testing-library/jest-dom": "^5.6.0",
     "@testing-library/react": "^10.0.4",
-    "@vitejs/plugin-react": "^3.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.5.0",
     "commander": "^5.0.0",
@@ -92,6 +91,7 @@
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.5.0",
     "@mui/styles": "^5.5.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "axios": "^0.21.2",
     "base58check": "^2.0.0",
     "bignumber.js": "^9.0.0",
