--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "prettier": "^2.0.2",
     "standard-version": "^9.0.0",
     "vite": "^4.2.3",
-    "vite-plugin-node-polyfills": "^0.7.0"
+    "vite-plugin-node-polyfills": "^0.7.0",
+    "vite-plugin-wasm": "^3.2.2"
   },
   "scripts": {
     "build": "npm run check && VITE_GIT_SHA=`git rev-parse --short HEAD` vite build",
@@ -100,6 +101,7 @@
     "bitcoinjs-lib": "^5.1.7",
     "bowser": "^2.6.1",
     "buffer": "^6.0.3",
+    "caravan-descriptors": "file:../../caravan-descriptors",
     "classnames": "^2.2.6",
     "diff": "^4.0.2",
     "fs-extra": "^9.0.0",
