chore: swap travis for github actions

--- a/package.json
+++ b/package.json
@@ -58,12 +58,11 @@
     "build": "npm run check && VITE_GIT_SHA=`git rev-parse --short HEAD` vite build",
     "build:ci": "npm run ci && VITE_GIT_SHA=`git rev-parse --short HEAD` vite build",
     "check": "npm run lint && npm run test:ci",
-    "ci": "npm run lint && npm run commitlint-travis && npm run test:ci",
+    "ci": "npm run lint && npm run test:ci",
     "commit": "./node_modules/cz-customizable/standalone.js",
     "deploy": "gh-pages -d build",
     "gh-pages": "CI=true npm run build && gh-pages -d build",
     "lint": "eslint --ext .js,.jsx src/",
-    "commitlint-travis": "commitlint-travis",
     "predeploy": "npm run build",
     "release": "standard-version",
     "start": "HTTPS=true npm run preview",
