--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "homepage": "https://unchained-capital.github.io/caravan",
   "engineStrict": true,
   "engines": {
-    "node": ">=16"
+    "node": ">=20"
   },
   "overrides": {
     "jspdf": "2.5.1"
@@ -32,16 +32,26 @@
     "@commitlint/travis-cli": "^9.0.1",
     "@testing-library/jest-dom": "^5.6.0",
     "@testing-library/react": "^10.0.4",
+    "@types/history": "^5.0.0",
+    "@types/react": "^17.0.69",
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.26",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/parser": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.5.0",
     "commander": "^5.0.0",
     "commitlint-config-cz": "^0.13.1",
     "cz-customizable": "^6.2.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest-dom": "^3.0.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-testing-library": "^3.1.0",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.6",
@@ -51,26 +61,27 @@
     "jest-junit": "^11.0.1",
     "prettier": "^2.0.2",
     "standard-version": "^9.0.0",
+    "typescript": "^5.0.2",
     "vite": "^4.2.3",
     "vite-plugin-node-polyfills": "^0.7.0"
   },
   "scripts": {
-    "build": "npm run check && VITE_GIT_SHA=`git rev-parse --short HEAD` vite build",
-    "build:ci": "npm run ci && VITE_GIT_SHA=`git rev-parse --short HEAD` vite build",
+    "build": "npm run check && __GIT_SHA__=`git rev-parse --short HEAD` tsc && vite build",
+    "build:ci": "npm run ci && __GIT_SHA__=`git rev-parse --short HEAD` tsc && vite build",
     "check": "npm run lint && npm run test:ci",
     "ci": "npm run lint && npm run commitlint-travis && npm run test:ci",
     "commit": "./node_modules/cz-customizable/standalone.js",
     "deploy": "gh-pages -d build",
     "gh-pages": "CI=true npm run build && gh-pages -d build",
-    "lint": "eslint --ext .js,.jsx src/",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "commitlint-travis": "commitlint-travis",
     "predeploy": "npm run build",
     "release": "standard-version",
     "start": "HTTPS=true npm run preview",
-    "test": "VITE_GIT_SHA=`git rev-parse --short HEAD` jest",
+    "test": "__GIT_SHA__=`git rev-parse --short HEAD` jest",
     "test:ci": "CI=true jest --coverage",
-    "dev": "VITE_GIT_SHA=`git rev-parse --short HEAD` vite",
-    "preview": "VITE_GIT_SHA=`git rev-parse --short HEAD` vite preview"
+    "dev": "__GIT_SHA__=`git rev-parse --short HEAD` vite",
+    "preview": "__GIT_SHA__=`git rev-parse --short HEAD` vite preview"
   },
   "husky": {
     "hooks": {
@@ -91,6 +102,8 @@
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.5.0",
     "@mui/styles": "^5.5.0",
+    "@trezor/transport": "^1.1.15",
+    "@types/redux": "^3.6.0",
     "@vitejs/plugin-react": "^3.1.0",
     "axios": "^0.21.2",
     "base58check": "^2.0.0",
@@ -131,6 +144,6 @@
     "reselect": "^4.0.0",
     "sass": "^1.56.2",
     "unchained-bitcoin": "^0.4.1",
-    "unchained-wallets": "^0.5.1"
+    "unchained-wallets": "^0.6.2"
   }
 }
