fix: typography tweak to deprecation banner

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@caravan/descriptors": "^0.0.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
